support COPY ... STDIN

--- a/dbgen/Makefile
+++ b/dbgen/Makefile
@@ -107,10 +107,10 @@ CC      = gcc
 #                                  SGI, SUN, U2200, VMS, LINUX, WIN32 
 # Current values for WORKLOAD are:  TPCH
 DATABASE = POSTGRESQL 
-MACHINE  = LINUX 
+MACHINE  = OSX 
 WORKLOAD = TPCH
 #
-CFLAGS	= -g -DDBNAME=\"dss\" -D$(MACHINE) -D$(DATABASE) -D$(WORKLOAD) -DRNG_TEST -D_FILE_OFFSET_BITS=64 
+CFLAGS	= -g -DDBNAME=\"dss\" -D$(MACHINE) -D$(DATABASE) -D$(WORKLOAD) -DEOL_HANDLING -DRNG_TEST -D_FILE_OFFSET_BITS=64 
 LDFLAGS = -O
 # The OBJ,EXE and LIB macros will need to be changed for compilation under
 #  Windows NT
