--- a/dbgen/Makefile.cygwin
+++ b/dbgen/Makefile.cygwin
@@ -107,7 +107,7 @@ CC      = gcc
 #                                  SGI, SUN, U2200, VMS, LINUX, WIN32 
 # Current values for WORKLOAD are:  TPCH
 DATABASE = POSTGRESQL 
-MACHINE  = OSX
+MACHINE  = LINUX 
 WORKLOAD = TPCH
 #
 CFLAGS	= -g -DDBNAME=\"dss\" -D$(MACHINE) -D$(DATABASE) -D$(WORKLOAD) -DEOL_HANDLING -DRNG_TEST -D_FILE_OFFSET_BITS=64 
@@ -115,7 +115,7 @@ LDFLAGS = -O
 # The OBJ,EXE and LIB macros will need to be changed for compilation under
 #  Windows NT
 OBJ     = .o
-EXE     =
+EXE     = .exe
 LIBS    = -lm
 #
 # NO CHANGES SHOULD BE NECESSARY BELOW THIS LINE
