--- a/dbgen/Makefile.linux
+++ b/dbgen/Makefile.linux
@@ -107,7 +107,7 @@ CC      = gcc
 #                                  SGI, SUN, U2200, VMS, LINUX, WIN32 
 # Current values for WORKLOAD are:  TPCH
 DATABASE = POSTGRESQL 
-MACHINE  = OSX
+MACHINE  = LINUX 
 WORKLOAD = TPCH
 #
 CFLAGS	= -g -DDBNAME=\"dss\" -D$(MACHINE) -D$(DATABASE) -D$(WORKLOAD) -DEOL_HANDLING -DRNG_TEST -D_FILE_OFFSET_BITS=64 
